--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>The Red Panda</title>
 	</head>
 	<body>
+		<h1>The Adorable Red Panda</h1>
 		<p>The red panda (<i class="taxonomic">Ailurus fulgens</i>), also called the <b>lesser panda</b>, the <b>red bear-cat</b>, and the <b>red cat-bear</b>, is a <a href="//en.wikipedia.org/wiki/Mammal">mammal</a> native to the eastern <a href="//en.wikipedia.org/wiki/Himalayas">Himalayas</a> and southwestern China. It has reddish-brown fur, a long, shaggy tail, and a waddling gait due to its shorter front legs, and is slightly larger than a domestic cat. It is arboreal, feeds mainly on bamboo, but also eats eggs, birds, and insects. It is a solitary animal, mainly active from dusk to dawn, and is largely sedentary during the day.
 
 		The red panda has been classified as <a href="//en.wikipedia.org/wiki/Endagered_species">Endangered</a> by the <a href="//en.wikipedia.org/wiki/International_Union_for_Conservation_of_Nature" title="International Union for Conservation of Nature">IUCN</a> because <strong>its wild population is estimated at less than 10,000 mature individuals</strong> and continues to decline due to <a href="//en.wikipedia.org/wiki/Habitat_destruction">habitat loss</a> and <a href="//en.wikipedia.org/wiki/Habitat_fragmentation">fragmentation</a>, <a href="//en.wikipedia.org/wiki/Poaching">poaching</a>, and <a href="//en.wikipedia.org/wiki/Inbreeding_depression">inbreeding depression</a>, although red pandas are protected by national laws in their range countries.
