Fixed text change nav issues.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
                 <ul>
 
-                    <li><a href="index.html" class="current">Home</a></li>
-                    <li><a href="biologyAndBehavior.html">Biology and Behavior</a></li>
-                    <li><a href="phylogenetics.html">Phylogenetics</a></li>
-                    <li><a href="threatsAndConservation.html">Threats and Conservation</a></li>
+                    <li><a id="h" href="index.html" class="current">Home</a></li>
+                    <li><a id="b" href="biologyAndBehavior.html">Biology and Behavior</a></li>
+                    <li><a id="p" href="phylogenetics.html">Phylogenetics</a></li>
+                    <li><a id="t" href="threatsAndConservation.html">Threats and Conservation</a></li>
 
                 </ul>
 
